updated about page, some basic styling fixes

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h1>Database of the Moon</h1>
-                    <a href="#/">home</a>
-                    <a href="#/allalbums">see all</a>
-                    <a href="#/about">about</a>
+                    <a href="#/" class="navlink">home</a>
+                    <a href="#/allalbums" class="navlink">see all</a>
+                    <a href="#/about" class="navlink">about</a>
                     <div ng-view></div>
                 </div>
             </div>
