--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1>Database of the Moon</h1>
+                    <h1 class="title">Database of the Moon</h1>
                     <a href="#/" class="navlink">home</a>
                     <a href="#/allalbums" class="navlink">see all</a>
                     <a href="#/about" class="navlink">about</a>
